--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marquitobb/valid-phone-number.git"
+  },
+  "bugs": {
+    "url": "https://github.com/marquitobb/valid-phone-number/issues"
+  },
+  "homepage": "https://github.com/marquitobb/valid-phone-number#readme"
 }
